tests/baselines/reference/parserCastVersusArrowFunction1.errors.txt
==== tests/cases/compiler/parserCastVersusArrowFunction1.ts (17 errors) ====
    var v = <T>() => 1;
    var v = <T>a;
        ~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(2,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type 'any'.
             ~
!!! parserCastVersusArrowFunction1.ts(2,10): error TS2095: Cannot find name 'T'.
               ~
!!! parserCastVersusArrowFunction1.ts(2,12): error TS2095: Cannot find name 'a'.
    
    var v = <T>(a) => 1;
        ~~~~~~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(4,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any) => number'.
    var v = <T>(a, b) => 1;
        ~~~~~~~~~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(5,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any, b: any) => number'.
    var v = <T>(a = 1, b = 2) => 1;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(6,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a?: number, b?: number) => number'.
    
    var v = <T>(a);
        ~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(8,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type 'any'.
             ~
!!! parserCastVersusArrowFunction1.ts(8,10): error TS2095: Cannot find name 'T'.
                ~
!!! parserCastVersusArrowFunction1.ts(8,13): error TS2095: Cannot find name 'a'.
    var v = <T>(a, b);
        ~~~~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(9,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type 'any'.
             ~
!!! parserCastVersusArrowFunction1.ts(9,10): error TS2095: Cannot find name 'T'.
                ~
!!! parserCastVersusArrowFunction1.ts(9,13): error TS2095: Cannot find name 'a'.
                   ~
!!! parserCastVersusArrowFunction1.ts(9,16): error TS2095: Cannot find name 'b'.
    var v = <T>(a = 1, b = 2);
        ~~~~~~~~~~~~~~~~~~~~~
!!! parserCastVersusArrowFunction1.ts(10,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type 'any'.
             ~
!!! parserCastVersusArrowFunction1.ts(10,10): error TS2095: Cannot find name 'T'.
                ~
!!! parserCastVersusArrowFunction1.ts(10,13): error TS2095: Cannot find name 'a'.
                       ~
!!! parserCastVersusArrowFunction1.ts(10,20): error TS2095: Cannot find name 'b'.